hphp/test/slow/enum-invalid-base/maybe_resource.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/maybe_resource.php on line 3
